--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,10 @@
 </head>
 <body>
 
+<% flash.each do |name, msg| %>
+      <%= content_tag :div, msg, class: "alert alert-info"  %> <!-- this is bootstrap -->
+<% end %>
+
 <%= yield %>
 
 </body>
