added new pin link to index page

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -6,3 +6,5 @@
 </h1>
 
 <%= link_to "Back", root_path %>
+<%= link_to "Edit", edit_pin_path %>
+<%= link_to "Delete", pin_path, method: :delete, data: {confirm: "Are you sure?"} %>
