updated the email addresses

--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -5,6 +5,11 @@
 	</p>
 </h1>
 
+<p></p>
+	Submitted by
+	<%= @pin.user.email %>
+<br/>
+
 <%= link_to "Back", root_path %>
 <%= link_to "Edit", edit_pin_path %>
 <%= link_to "Delete", pin_path, method: :delete, data: {confirm: "Are you sure?"} %>
