--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,34 @@
 </head>
 <body>
 
+<div class="container">
+      <div class="navbar-brand">
+        <%= link_to "Yummy Yucky", root_path %>
+      </div>
+      <% if user_signed_in? #some conditional links for if hte user is signed in. %>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to "New Dish", new_pin_path %>
+          </li>
+          <li>
+            <%= link_to "Account", edit_user_registration_path %>
+          </li>
+          <li>
+            <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+          </li>
+        </ul>
+      <% else %>
+        <ul class="nav navbar-nav navbar-right">
+          <li>
+            <%= link_to "Sign Up", new_user_registration_path %>
+          </li>
+          <li>
+            <%= link_to "Sign In", new_user_session_path %>
+          </li>
+        </ul>
+      <% end %>
+    </div>
+
 <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, class: "alert alert-info"  %> <!-- this is bootstrap -->
 <% end %>
