--- a/app/views/pins/edit.html.erb
+++ b/app/views/pins/edit.html.erb
@@ -1,3 +1,6 @@
-<h1>Edit Pin</h1>
-<%= render 'form' %>
-<%= link_to "Cancel", pin_path %>
+<div class="col-md-6 col-md-offset-3">
+	<h1>Edit Pin</h1>
+	<%= render 'form' %>
+	<%= link_to "Cancel", pin_path %>
+</div>
+
