--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,6 +1,8 @@
 
 <% @pins.each do |pin| %>
+  <%= link_to (image_tag pin.image.url(:medium)), pin %>
   <h2>
     <%= link_to pin.title, pin %>
   </h2>
 <% end %>
+
