--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -1,8 +1,12 @@
-
-<% @pins.each do |pin| %>
-  <%= link_to (image_tag pin.image.url(:medium)), pin %>
-  <h2>
-    <%= link_to pin.title, pin %>
-  </h2>
-<% end %>
-
+<div class="transitions-enabled" id="pins">
+	<% @pins.each do |pin| %>
+	  <div class="box panel panel-default">
+	    <%= link_to (image_tag pin.image.url(:medium)), pin %>
+	    <div class="panel-body">
+	      <h2>
+	        <%= link_to pin.title, pin %>
+	      </h2>
+	    </div>
+	  </div>
+	<% end %>
+</div>
