--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -1,19 +1,38 @@
-<%= image_tag @pin.image.url(:medium) %>
 
-
-
-<h1>
-	<%= @pin.title %>
-	<p>
-	<%= @pin.description %>
-	</p>
-</h1>
-
-<p></p>
-	Submitted by
-	<%= @pin.user.email %>
-<br/>
-
-<%= link_to "Back", root_path %>
-<%= link_to "Edit", edit_pin_path %>
-<%= link_to "Delete", pin_path, method: :delete, data: {confirm: "Are you sure?"} %>
+<div class="row" id="pin_show">
+	  <div class="col-md-8" "col-md-offset-2">
+	    <div class="panel panel-default">
+	      <div class="panel-heading pin_image">
+	        <%= image_tag @pin.image.url(:medium) %> 
+	      </div>
+	      <div class="panel-body">
+	        <h1>
+	          <%= @pin.title %>
+	        </h1>
+	        <p class="description">
+	          <%= @pin.description %>
+	        </p>
+	        <p></p>
+	   <!--      Submitted by
+	        <%= @pin.user.email %> -->
+	      </div>
+	      <div class="panel-footer">
+	        <div class="row">
+	          <div class="col-md-6">
+	            <p class="user"></p>
+	            Submitted by
+	            <%= @pin.user.email %>
+	          </div>
+	          <div class="col-md-6">
+	            <div class="btn-group pull-right">
+	              <% if user_signed_in? %>
+	                <%= link_to "Edit", edit_pin_path, class: "btn btn-default" %>
+	                <%= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-default" %>
+	              <% end %>
+	            </div>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
