--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,5 +1,12 @@
-<div class="col-md-6 col-md-offset-3">
-	<h1>New Form</h1>
-	<%= render 'form' %>
-	<%= link_to "Back", root_path %>
+<div class="col-md-6 col-md-offset-3"></div>
+<div class="row">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h1>New Form</h1>
+    </div>
+    <div class="panel-body">
+      <%= render 'form' %>
+      <%= link_to "Back", root_path %>
+    </div>   
+  </div>
 </div>
