--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -1,12 +1,13 @@
-<div class="col-md-6 col-md-offset-3"></div>
-<div class="row">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h1>New Form</h1>
+<div class="col-md-8 col-md-offset-2">
+  <div class="row">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <h1>Create A New Pin</h1>
+      </div>
+      <div class="panel-body">
+        <%= render 'form' %>
+        <%= link_to "Back", root_path %>
+      </div>
     </div>
-    <div class="panel-body">
-      <%= render 'form' %>
-      <%= link_to "Back", root_path %>
-    </div>   
   </div>
 </div>
