--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
       <% if user_signed_in? %>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <%= link_to "Pins", pins_path %>
+            <%= link_to "Restaurants", pins_path %>
           </li>
           <li>
             <%= link_to "New Pin", new_pin_path %>
